<resources>
    <string name="app_name">VoiceAlytics</string>
    <string name="app_version">1.0.8</string>
    <string name="api">https://voicealytics.tk/json/</string>


    <string name="appbar_default_text">VoiceAlytics</string>
    <string name="appbar_back_button_text">Назад</string>
    <string name="registration_appbar">Регистрация</string>
    <string name="enter_your_phone">Войдите в систему с вашими учетными данными</string>
    <string name="registration_password">Введите код</string>
    <string name="login_with_my_account">Войти</string>

    <string name="title_activity_audio">Запись</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_audio_list">AudioList</string>



    <string name="start_new_audio">Начать запись</string>
    <string name="end_audio">Остановить запись</string>
    <string name="send_audio">Отправить</string>
    <string name="files_to_upload">Файлов для загрузки: </string>

</resources>
